Try a fix of blog list on mobile display

--- a/content/css/blog.css
+++ b/content/css/blog.css
@@ -23,6 +23,7 @@
 }
 
 .blog-item-container {
+  flex-shrink: 0;
   margin-bottom: 2em;
   display: flex;
   flex-direction: column;
